# wpr_command_center

./: CMakeLists.txt  README.md  mainpage.dox  package.xml
include/wpr_command_center/: PathHolder.h  arrow_item.h  common.h  main_window.hpp  map_client.h  map_view.h  path_item.h  qnode.hpp  robot_info_client.h  robot_info_widget.h  robot_item.h  waypoint_item.h
launch/: fake_commander.launch  gui.launch  map_server.launch  warehouse.launch
resources/: images.qrc
rviz/: map.rviz
scripts/: install_for_kinetic.sh  install_for_melodic.sh  install_for_noetic.sh
src/: PathHolder.cpp  arrow_item.cpp  main.cpp  main_window.cpp  map_client.cpp  map_view.cpp  path_item.cpp  qnode.cpp  robot_info_client.cpp  robot_info_widget.cpp  robot_item.cpp  waypoint_item.cpp
ui/: main_window.ui
