<?xml version="1.0"?>
<package>
  <name>wpr_command_center</name>
  <version>0.1.0</version>
  <description>

     wpr_command_center

  </description>
  <maintainer email="zhangwanjie@6-robot.com">ZhangWanjie</maintainer>
  <author>ZhangWanjie</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>qt_build</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>wpr_warehousing_monitor</build_depend>
  <build_depend>waterplus_map_tools</build_depend>
  <!-- <build_depend>libqt4-dev</build_depend> -->
  <!-- <run_depend>qt_build</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>wpr_warehousing_monitor</run_depend>
  <run_depend>waterplus_map_tools</run_depend>
  <!-- <run_depend>libqt4-dev</run_depend> -->
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>
  <build_depend>qtbase5-dev</build_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
 
</package>
